# LearnAgent

./: AGENTS.md  README.md  pyproject.toml  verification.md
.codex/: context-question-1.json  context-question-2.json  context-question-3.json  context-question-4.json  context-scan.json  context-sufficiency.json  operations-log.md  review-report.md  structured-request.json  testing.md
ContextAgent/: 01-overview.md  02-quickstart.md  03-architecture.md  04-core-mechanisms.md  05-data-models.md  06-api-reference.md  07-development-guide.md  08-testing.md  09-end-to-end-flow.md  10-tools-design.md  11-profile-catalog.md  12-pipeline-configs.md  13-design-deepdive.md  README.md
Server/: README.md  package-lock.json  package.json
Server/src/: cli.js  server.js
Server/test/: cli.test.js  render.test.js  server.test.js
ai_analysis/: AI_MODEL_USAGE_ANALYSIS.md
ai_analysis/translated_prompts/: INDEX.md  README.md_docs_prompt_prompt_zh.md
mini-agent/docs/: 01-overview.md  02-quickstart.md  03-architecture.md  04-core-mechanisms.md  05-data-models.md  06-api-reference.md  07-development-guide.md  08-testing.md  09-skills.md  10-deepwiki-backup.md  11-end-to-end-flow.md  12-tools-design.md  README.md
mini-agent/tour/: mini-agent-architecture.md  mini-agent-code-tour.md  mini-agent-file-index.md  mini-agent-like-blueprint.md  minimax-agent-notes.md
src/echocodeview/: __init__.py  cli.py  server.py
src/echocodeview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_mermaid.py  test_server.py  test_tree.py
(+40 files in other folders)
