[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echocodeview"
version = "0.1.0"
description = "Local web markdown reader with CLI launcher."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Flask>=3.0.0",
  "Markdown>=3.6",
  "Pygments>=2.17"
]

[project.scripts]
echocodeview = "echocodeview.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
echocodeview = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
